src/test/ui/similar-tokens.stderr
error: expected one of `,`, `::`, `as`, or `}`, found `.`
  --> $DIR/similar-tokens.rs:7:10
   |
LL | use x::{A. B};
   |          ^ expected one of `,`, `::`, `as`, or `}` here

error: aborting due to previous error

